feat: enhance AI behaviors and tests for foxes, rabbits, wolves, and sheep
- Added synchronization between `FoxItemStorage` and vanilla equipment slot for visual item display.
- Improved rabbit AI with updated `RabbitBehaviorGoal` for evasion, burrow navigation, and responsive pathfinding.
- Introduced species-specific thresholds for hunger and thirst across wolves, foxes, and rabbits in testing helpers.
- Updated sheep grazing goal to improve behavior reliability, with frequent grass checks when hungry.
- Added tests for thirsty rabbits, sheep, and water-seeking behaviors to validate AI improvements.
- Enhanced game test environment with manual registration of behavior goals in tests.

--- a/src/main/resources/data/better-ecology/mobs/passive/chicken/mod_registry.yaml
+++ b/src/main/resources/data/better-ecology/mobs/passive/chicken/mod_registry.yaml
@@ -104,7 +104,14 @@ internal_state:
 
   # Thirst system
   thirst:
-    enabled: false
+    enabled: true
+    max_value: 100
+    starting_value: 100
+    decay_rate: 0.012              # Moderate thirst for small bird
+    thresholds:
+      satisfied: 75
+      thirsty: 30
+      dehydrated: 10
 
   # Body condition
   condition:
